# save-water

./: .env  .env.example  .gitignore  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  RENDER_DEPLOY.md  WEB_README.md  app.py  debug_change.py  demo.py  demo_pipeline.geojson  example_pipeline.geojson  process_simulation.py  pyproject.toml  render.yaml  requirements-web.txt  requirements.txt  start_web.py  test_ndwi.py  verify_pipeline.py  wsgi.py
aquaspot/: __init__.py  alerts.py  cli.py  config.py  detection.py  ingestion.py  masking.py  ndwi.py  reports.py
aquaspot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: base.html  base_backup_v2.html  index.html  index_backup.html  index_backup_v2.html  results.html
test_fix/: COMPREHENSIVE_ANALYSIS_REPORT.txt
test_output/: COMPREHENSIVE_ANALYSIS_REPORT.txt
test_output2/: COMPREHENSIVE_ANALYSIS_REPORT.txt
tests/: __init__.py  test_alerts.py  test_cli.py  test_config.py  test_detection.py  test_ingestion.py  test_masking.py  test_ndwi.py  test_reports.py
